--- a/src/Components/Card/styles.module.css
+++ b/src/Components/Card/styles.module.css
@@ -9,7 +9,8 @@
   button {
     font-size: 1.25rem;
     line-height: 140%;
-    background-color: var(--neutral-0);
+    background-color: var(--filterbtn);
+    color: var(--filterbtn-text);
     width: 35%;
     height: 100%;
     border-radius: 62.4rem;
@@ -35,7 +36,7 @@
 .cardContainer {
   width: 100%;
   max-height: 12.5rem;
-  background-color: var(--neutral-0);
+  background-color: var(--card-bg);
   padding: 1.25rem;
   border-radius: 1.25rem;
   box-shadow: 2px 5px 5px hsla(226, 11%, 37%, 0.15);
@@ -55,12 +56,12 @@
     font-size: 1.25rem;
     font-weight: 700;
     line-height: 120%;
-    color: var(--neutral-900);
+    color: var(--info-p-title);
   }
   p:last-child {
     font-size: 1rem;
     line-height: 140%;
-    color: var(--neutral-600);
+    color: var(--info-p);
   }
 }
 
@@ -75,12 +76,15 @@
     font-family: inherit;
     font-size: 1rem;
     line-height: 140%;
-    background-color: var(--neutral-0);
+    background-color: var(--removebtn);
+    color: var(--removebtn-text);
     border: 1px solid var(--neutral-300);
     border-radius: 62.4rem;
   }
   button:hover {
     cursor: pointer;
+    background-color: var(--red-700);
+    border: 1px solid var(--red-700);
   }
 }
 
@@ -146,5 +150,12 @@
   }
   .infoContainer {
     margin-bottom: 2.875rem;
+  }
+  .filter {
+    width: 73.125rem;
+    height: 2.875rem;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2.5rem;
   }
 }
