--- a/src/Components/Header/styles.module.css
+++ b/src/Components/Header/styles.module.css
@@ -1,3 +1,5 @@
+@import '../../styles.css';
+
 .extensionHeader {
   width: 100%;
   height: 4.125rem;
@@ -5,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--neutral-0);
+  background-color: var(--header-bg);
   border-radius: 0.625rem;
   margin-bottom: 2.5rem;
 
@@ -14,7 +16,7 @@
     height: 3.125rem;
     border-radius: 0.75rem;
     border: none;
-    background-color: var(--neutral-100);
+    background-color: var(--themebtn-color);
   }
 }
 .logoIcon {
